# msgr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Doxyfile.in  Makefile  README.md  cmake_install.cmake  install_manifest.txt  jsonapi.md  msgr-0.0.1-Linux.deb
.github/workflows/: release.yml
@CMAKE_CURRENT_BINARY_DIR@/docs/: graph_legend.html  index.html
_CPack_Packages/Linux/DEB/: msgr-0.0.1-Linux.deb
_CPack_Packages/Linux/DEB/msgr-0.0.1-Linux/: control  md5sums
docs/: AuthorizationWidget_8cpp.html  AuthorizationWidget_8cpp_8o_8d.html  AuthorizationWidget_8cpp__incl.map  AuthorizationWidget_8cpp__incl.md5  AuthorizationWidget_8h.html  AuthorizationWidget_8h__dep__incl.map  AuthorizationWidget_8h__dep__incl.md5  AuthorizationWidget_8h__incl.map  AuthorizationWidget_8h__incl.md5  AuthorizationWidget_8h_source.html  AutogenUsed_8txt.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  ChatWidget_8cpp.html  ChatWidget_8cpp_8o_8d.html  ChatWidget_8cpp__incl.map  ChatWidget_8cpp__incl.md5  ChatWidget_8h.html  ChatWidget_8h__dep__incl.map  ChatWidget_8h__dep__incl.md5  ChatWidget_8h__incl.map  ChatWidget_8h__incl.md5  ChatWidget_8h_source.html  ClientProcessor_8cpp.html  ClientProcessor_8cpp_8o_8d.html  ClientProcessor_8cpp__incl.map  ClientProcessor_8cpp__incl.md5  ClientProcessor_8h.html  ClientProcessor_8h__dep__incl.map  ClientProcessor_8h__dep__incl.md5  ClientProcessor_8h__incl.map  ClientProcessor_8h__incl.md5  ClientProcessor_8h_source.html  ClientThread_8cpp.html  ClientThread_8cpp_8o_8d.html  ClientThread_8cpp__incl.map  ClientThread_8cpp__incl.md5  (+1678 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+123 more)
src_client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  cmake_install.cmake  main.cpp  mainwindow.ui  msgr_client
src_client/client/: Client.cpp  Client.h  ClientThread.cpp  ClientThread.h
src_client/client_lib/client/: Client.cpp  Client.h  ClientThread.h
src_client/client_lib/client_processor/: ClientProcessor.cpp  ClientProcessor.h
src_client/client_processor/: ClientProcessor.cpp  ClientProcessor.h  IClientProcessor.h  UserInfo.h
src_client/main_window/: AuthorizationWidget.cpp  AuthorizationWidget.h  ChatWidget.cpp  ChatWidget.h  MainWidgets.h  MainWindow.cpp  MainWindow.h  RegistrationWidget.cpp  RegistrationWidget.h
src_client/main_window/messenger_widget/: ChatWidget.cpp  ChatWidget.h  MessengerWidget.cpp  MessengerWidget.h  StackedChatWidget.cpp  StackedChatWidget.h
src_client/message_processor/: IMsgProcessor.h  MsgProcessor.cpp  MsgProcessor.h
src_client/msgr_client_autogen/: mocs_compilation.cpp
src_client/msgr_client_autogen/5OXUWOYTCX/: moc_ChatWidget.cpp  moc_MessengerWidget.cpp  moc_StackedChatWidget.cpp
src_client/msgr_client_autogen/7EM65HM6UG/: moc_Client.cpp  moc_ClientThread.cpp
src_client/msgr_client_autogen/7LJZCEQUL6/: moc_IClientProcessor.cpp
src_client/msgr_client_autogen/LOICISCJLG/: moc_IMsgProcessor.cpp
src_client/msgr_client_autogen/TXKPOHTVN7/: moc_AuthorizationWidget.cpp  moc_ChatWidget.cpp  moc_MainWindow.cpp  moc_RegistrationWidget.cpp
src_client/msgr_client_lib_autogen/: moc_predefs.h  mocs_compilation.cpp
src_client/msgr_client_lib_autogen/2U5RGBDSTK/: moc_Client.cpp  moc_ClientThread.cpp
src_client/msgr_client_lib_autogen/V2V56K4ZTA/: moc_IClientProcessor.cpp
src_server/: CMakeLists.txt  Database.cpp  Database.h  Makefile  Server.cpp  Server.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  cmake_install.cmake  main.cpp  msgr_server  server.cpp  server.h  session.cpp  session.h
src_server/database/: Database.cpp  Database.h  IDatabase.h  SqlRec.cpp  SqlRec.h  SqliteDatabase.cpp  SqliteDatabase.h
src_server/server_processor/: IServerProcessor.h  ServerProcessor.cpp  ServerProcessor.h
src_server/session/: Session.h
src_shared/: MessageInfo.h  Notification.cpp  Notification.h  UserInfo.h
